RESOLVED FIXED74495
[GStreamer] padTemplate leak in webkitwebaudiosrc
https://bugs.webkit.org/show_bug.cgi?id=74495
Summary [GStreamer] padTemplate leak in webkitwebaudiosrc
Philippe Normand
Reported 2011-12-14 03:09:09 PST
Very similar to bug 74224 :) Will attach a patch.
Attachments
proposed patch (4.38 KB, patch)
2011-12-14 03:12 PST, Philippe Normand
mrobinson: review+
Philippe Normand
Comment 1 2011-12-14 03:12:14 PST
Created attachment 119189 [details] proposed patch
Philippe Normand
Comment 2 2011-12-14 09:27:44 PST
Judy Liqiong Hao
Comment 3 2011-12-14 14:49:37 PST
You stole my bug :)
Philippe Normand
Comment 4 2011-12-14 14:56:20 PST
Not exactly, same leak, different element :)
Note You need to log in before you can comment on or make changes to this bug.