[GStreamer] padTemplate leak in webkitwebaudiosrc https://bugs.webkit.org/show_bug.cgi?id=74495

Reviewed by Martin Robinson.

Use a GstPadTemplate smart pointer in webkit_web_audio_src_init to
avoid a memory leak after the ghost pad creation.

* platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(webkit_web_audio_src_init):
* platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
(WTF::adoptGRef):
(WTF::GstPadTemplate):
* platform/graphics/gstreamer/GRefPtrGStreamer.h:

Canonical link: https://commits.webkit.org/91176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102791 268f45cc-cd09-0410-ab3c-d52691b4dbfc