Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp
@@ -179,8 +179,8 @@ static void webkit_web_audio_src_init(WebKitWebAudioSrc* src)
     src->priv = priv;
     new (priv) WebKitWebAudioSourcePrivate();
 
-    GstPadTemplate* padTemplate = gst_static_pad_template_get(&srcTemplate);
-    priv->sourcePad = gst_ghost_pad_new_no_target_from_template("src", padTemplate);
+    GRefPtr<GstPadTemplate> padTemplate = adoptGRef(gst_static_pad_template_get(&srcTemplate));
+    priv->sourcePad = gst_ghost_pad_new_no_target_from_template("src", padTemplate.get());
     gst_element_add_pad(GST_ELEMENT(src), priv->sourcePad);
 
     priv->provider = 0;
